erDiagram
  TENANT ||--o{ API_KEY : "autentica"
  TENANT ||--o{ SERIE : "numera"
  TENANT ||--o{ DOCUMENTO : "emite"
  TENANT ||--o{ RESUMEN_DIARIO : "genera"
  TENANT ||--o{ COMUNICACION_BAJA : "genera"
  DOCUMENTO ||--o| COMPROBANTE : "especializa"
  DOCUMENTO ||--o| RETENCION_PERCEPCION : "especializa"
  DOCUMENTO ||--o| GUIA_REMISION : "especializa"
  COMPROBANTE ||--|{ COMPROBANTE_ITEM : "contiene"
  COMPROBANTE ||--o{ COMPROBANTE_CUOTA : "cuotas"
  COMPROBANTE }o--o| COMPROBANTE : "referencia (nota)"
  RETENCION_PERCEPCION ||--|{ RP_DOCUMENTO : "documentos"
  GUIA_REMISION ||--|{ GUIA_ITEM : "bultos"
  GUIA_REMISION ||--o{ GUIA_VEHICULO : ""
  GUIA_REMISION ||--o{ GUIA_CONDUCTOR : ""
  RESUMEN_DIARIO ||--|{ RESUMEN_LINEA : "1..500"
  RESUMEN_LINEA }o--|| DOCUMENTO : "boleta/nota B"
  COMUNICACION_BAJA ||--|{ BAJA_LINEA : ""
  BAJA_LINEA }o--|| DOCUMENTO : "factura/nota F"
  DOCUMENTO ||--o{ OUTBOX : "acciones pendientes"
  RESUMEN_DIARIO ||--o{ OUTBOX : ""
  COMUNICACION_BAJA ||--o{ OUTBOX : ""
  DOCUMENTO ||--o{ EVENTO_DOCUMENTO : "auditoría"

  TENANT {
    uuid id PK
    varchar ruc UK
    varchar razon_social
    varchar entorno "BETA | PRODUCCION"
    varchar destino "SUNAT | OSE"
    bytea sol_usuario_enc
    bytea sol_clave_enc
    bytea cert_pkcs12_enc
    bytea cert_clave_enc
    date cert_vigencia_hasta
    bytea gre_client_id_enc
    bytea gre_client_secret_enc
    varchar ose_url
    time hora_resumen_diario
    timestamptz created_at
  }
  API_KEY {
    uuid id PK
    uuid tenant_id FK
    varchar key_hash UK
    varchar prefijo
    boolean activa
    timestamptz created_at
    timestamptz revoked_at
  }
  SERIE {
    uuid id PK
    uuid tenant_id FK
    varchar tipo
    varchar codigo
    bigint ultimo_numero
    boolean activa
  }
  DOCUMENTO {
    uuid id PK
    uuid tenant_id FK
    varchar tipo "01 03 07 08 20 40 09 31"
    varchar serie
    bigint numero
    date fecha_emision
    varchar estado
    varchar modo_envio
    varchar hash
    varchar nombre_archivo
    varchar ticket
    int intentos
    text ultimo_error
    varchar cdr_codigo
    text cdr_descripcion
    jsonb cdr_observaciones
    varchar xml_key
    varchar cdr_key
    varchar pdf_key
    varchar idempotency_key
    timestamptz created_at
    timestamptz updated_at
  }
  COMPROBANTE {
    uuid documento_id PK, FK
    varchar tipo_operacion
    varchar moneda
    varchar forma_pago
    date fecha_vencimiento
    varchar receptor_tipo_doc
    varchar receptor_num_doc
    varchar receptor_nombre
    varchar receptor_direccion
    uuid referencia_documento_id FK
    varchar referencia_motivo
    numeric total_gravado
    numeric total_exonerado
    numeric total_inafecto
    numeric total_gratuito
    numeric total_igv
    numeric total_isc
    numeric total_icbper
    numeric total_descuentos
    numeric total
    jsonb detraccion
    jsonb extras
  }
  COMPROBANTE_ITEM {
    uuid id PK
    uuid comprobante_id FK
    int orden
    varchar codigo
    varchar codigo_sunat
    text descripcion
    varchar unidad
    numeric cantidad
    numeric valor_unitario
    numeric precio_unitario
    varchar tipo_afectacion_igv
    numeric porcentaje_igv
    numeric igv
    numeric isc
    numeric icbper
    numeric descuento
    numeric total
  }
  COMPROBANTE_CUOTA {
    uuid id PK
    uuid comprobante_id FK
    int orden
    numeric monto
    date fecha_pago
  }
  RETENCION_PERCEPCION {
    uuid documento_id PK, FK
    varchar regimen
    numeric tasa
    varchar contraparte_tipo_doc
    varchar contraparte_num_doc
    varchar contraparte_nombre
    numeric total_operacion
    numeric total_retenido
  }
  RP_DOCUMENTO {
    uuid id PK
    uuid rp_id FK
    varchar tipo_doc
    varchar serie_numero
    date fecha_emision
    varchar moneda
    numeric importe_total
    numeric importe_retenido
    jsonb pagos
  }
  GUIA_REMISION {
    uuid documento_id PK, FK
    varchar destinatario_tipo_doc
    varchar destinatario_num_doc
    varchar destinatario_nombre
    varchar motivo_traslado
    varchar modalidad_traslado
    date fecha_traslado
    numeric peso_total
    varchar unidad_peso
    varchar partida_ubigeo
    varchar partida_direccion
    varchar llegada_ubigeo
    varchar llegada_direccion
    jsonb transportista
    jsonb extras
  }
  GUIA_ITEM {
    uuid id PK
    uuid guia_id FK
    int orden
    varchar codigo
    text descripcion
    numeric cantidad
    varchar unidad
  }
  GUIA_VEHICULO {
    uuid id PK
    uuid guia_id FK
    varchar placa
    boolean principal
  }
  GUIA_CONDUCTOR {
    uuid id PK
    uuid guia_id FK
    varchar tipo_doc
    varchar num_doc
    varchar nombres
    varchar licencia
  }
  RESUMEN_DIARIO {
    uuid id PK
    uuid tenant_id FK
    date fecha_referencia
    date fecha_generacion
    int correlativo
    varchar estado
    varchar ticket
    varchar nombre_archivo
    varchar xml_key
    varchar cdr_key
    text ultimo_error
    timestamptz created_at
  }
  RESUMEN_LINEA {
    uuid id PK
    uuid resumen_id FK
    uuid documento_id FK
    int orden
    varchar condicion "1 adicionar | 2 modificar | 3 anular"
  }
  COMUNICACION_BAJA {
    uuid id PK
    uuid tenant_id FK
    date fecha_generacion
    int correlativo
    varchar estado
    varchar ticket
    varchar nombre_archivo
    varchar xml_key
    varchar cdr_key
    text ultimo_error
    timestamptz created_at
  }
  BAJA_LINEA {
    uuid id PK
    uuid baja_id FK
    uuid documento_id FK
    text motivo
  }
  OUTBOX {
    uuid id PK
    uuid tenant_id FK
    varchar agregado "DOCUMENTO | RESUMEN | BAJA"
    uuid agregado_id
    varchar accion "ENVIAR | CONSULTAR_TICKET"
    int intentos
    timestamptz siguiente_intento
    timestamptz locked_until
    text ultimo_error
  }
  EVENTO_DOCUMENTO {
    uuid id PK
    uuid documento_id FK
    varchar estado_anterior
    varchar estado_nuevo
    text detalle
    timestamptz ocurrido_en
  }
